[package]
name = "tmpbar"
version = "0.0.1"
edition = "2021"
rust-version = "1.76"

[dependencies]
egui = "0.27.2"
egui_extras = { version = "0.27.2", default-features = false, features = [
    "all_loaders",
] }
image = { version = "0.24", features = ["jpeg", "png"] }
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
] }
log = "0.4"
egui-winit = { version = "0.27.2", features = ["x11", "wayland"] }

xcb = "1.4.0"
xcb-wm = { version = "0.4.0", features = ["ewmh", "icccm"] }
mlua = { version = "0.9.8", features = ["luajit52", "unstable"] }
gumdrop = "0.8.1"
display-info = "0.5.1"
ansi_term = "0.12.1"
inotify = "0.10.2"

# egui features
serde = { version = "1", features = ["derive"] }
env_logger = "0.10"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
