[package]
name = "tmpbar"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"

[dependencies]
egui = "0.33.0"
egui_extras = { version = "0.33.0", default-features = false, features = [
    "all_loaders",
] }
image = { version = "0.24", features = ["jpeg", "png"] }
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui-winit = { version = "0.33.0", features = ["x11", "wayland"] }
egui_taffy = "0.10.0"

xcb = { version = "1.4.0" }
xcb-wm = { version = "0.4.0", features = ["ewmh", "icccm"] }
display-info = "0.5.1"
mlua = { version = "0.9.8", features = ["luajit52", "unstable"] }

crossbeam-channel = "0.5.13"
gumdrop = "0.8.1"
ansi_term = "0.12.1"
csscolorparser = "0.7"
inotify = "0.10.2"
signal-hook = "0.3.17"

probes = "0.7.1"
systemstat = "0.2.5"
battery = "0.7.8"

# egui features
serde = { version = "1", features = ["derive"] }
env_logger = "0.10"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
